[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/PlayerMovement.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PlayerDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4.85349 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.657895, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0, -1 ), 0.0, 0.0, 0, 0, Vector2( 0.50329, 1 ), 10.9804, 0.0, 0, 0, Vector2( 1, 0.0367647 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
tail_lerp = 0.092

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerMovement" parent="." instance=ExtResource( 1 )]
ground_friction = 0.381
hori_friction = 0.025
accel = 800.0
flapforce = 1200.0
gravity = 800.0
air_friction = 0.082
glide_amp = 0.2
glide_conversion_rate = 0.488
turn_dur = 1.072
body_path = NodePath("..")
xmod = SubResource( 2 )
ymod = SubResource( 3 )

[node name="Stick" type="Position2D" parent="."]

[node name="PlayerCamera" parent="Stick" instance=ExtResource( 2 )]
smoothing_enabled = false

[node name="PlayerDisplay" parent="." instance=ExtResource( 3 )]
flap_down_dur = 0.252
flap_up_dur = 0.166
open_tuck_dur = 0.283
feet_dur = 0.155

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
